--- a/templates/site/item.html.twig
+++ b/templates/site/item.html.twig
@@ -1,5 +1,21 @@
 <div>
     <hr>
-    <h4>{{ title }}</h4>
-    <blockquote>{{ text }}</blockquote>
+    <h3>{{ title }}</h3>
+    <div class="row">
+        <div class="col-sm">
+            {{ text|raw }}
+            {% if img %}
+        </div>
+        <div class="col-sm-4">
+            <img width="100%" src="{{ img }}">
+            {% endif %}
+        </div>
+        <div class="col-sm-12">
+            <div class="float-right">
+                <a class="btn btn-secondary" href="{{ link }}" target="_blank">
+                    Source <i class="fa fa-external-link"></i>
+                </a>
+            </div>
+        </div>
+    </div>
 </div>
