--- a/templates/site/news.html.twig
+++ b/templates/site/news.html.twig
@@ -3,24 +3,15 @@
 {% block title %}News Need{% endblock %}
 
 {% block body %}
-    <style>
-        .example-wrapper {
-            margin: 1em auto;
-            max-width: 800px;
-            width: 95%;
-            font: 18px/1.5 sans-serif;
-        }
-
-        .example-wrapper code {
-            background: #F5F5F5;
-            padding: 2px 6px;
-        }
-    </style>
-
     <div class="example-wrapper">
-        <h1>News! ✅</h1>
+        <h1>News! <span class="fa fa-rss"></span></h1>
         {% for item in news %}
-            {{ include('site/item.html.twig', {title: item.title, text: item.description}) }}
+            {{ include('site/item.html.twig', {
+                title: item.title,
+                text: item.description,
+                link: item.link,
+                img: item.enclosure["@url"] ?? ''
+            }) }}
         {% endfor %}
     </div>
 {% endblock %}
