--- a/templates/site/item.html.twig
+++ b/templates/site/item.html.twig
@@ -14,7 +14,7 @@
         </div>
         <div class="col-sm-12">
             <div class="d-inline-block">
-                <i>{{ date }}</i>
+                <i>{{ date|date }}</i>
             </div>
             <div class="d-inline-block float-right">
                 <a class="btn btn-secondary" href="{{ link }}" target="_blank">
