--- a/templates/site/index.html.twig
+++ b/templates/site/index.html.twig
@@ -4,8 +4,8 @@
 
 {% block body %}
     <div class="example-wrapper">
-        <h1>Hello everyone! ✅</h1>
-
-
+        <h1 class="d-inline-flex">News Need</h1>
+        {% include('site/_form.html.twig') %}
+        <hr>
     </div>
 {% endblock %}
