--- a/templates/site/news.html.twig
+++ b/templates/site/news.html.twig
@@ -4,7 +4,8 @@
 
 {% block body %}
     <div class="example-wrapper">
-        <h1>News! <span class="fa fa-rss"></span></h1>
+        <h1 class="d-inline-flex">News Need</h1>
+        {% include('site/_form.html.twig') %}
         {% for item in news %}
             {{ include('site/item.html.twig', {
                 title: item.title ?? '',
