--- a/templates/site/index.html.twig
+++ b/templates/site/index.html.twig
@@ -3,9 +3,13 @@
 {% block title %}News Need{% endblock %}
 
 {% block body %}
-    <div class="example-wrapper">
-        <h1 class="d-inline-flex">News Need</h1>
-        {% include('site/_form.html.twig') %}
+    <div class="example-wrapper" >
+        <div class="row">
+            <div class="col-sm-12">
+                <h1 class="d-inline-flex">News Need</h1>
+                {% include('site/_form.html.twig') %}
+            </div>
+        </div>
         <hr>
     </div>
 {% endblock %}
