--- a/templates/site/index.html.twig
+++ b/templates/site/index.html.twig
@@ -3,7 +3,8 @@
 {% block title %}News Need{% endblock %}
 
 {% block body %}
-    <div class="example-wrapper" >
+    <div class="example-wrapper" style="margin-top: 20%">
+        <hr>
         <div class="row">
             <div class="col-sm-12">
                 <h1 class="d-inline-flex">News Need</h1>
