--- a/templates/site/item.html.twig
+++ b/templates/site/item.html.twig
@@ -1,6 +1,6 @@
 <div>
     <hr>
-    <h3>{{ title }}</h3>
+    <h3>{{ title|raw }}</h3>
     <div class="row">
         <div class="col-sm">
             <br>{{ text|raw }}
@@ -8,15 +8,15 @@
         </div>
         <div class="col-sm-4">
             <img width="100%" src="{{ img }}">
-            <hr>
-
             {% endif %}
         </div>
         <div class="col-sm-12">
             <div class="d-inline-block">
+                <hr>
                 <i>{{ date|date }}</i>
             </div>
             <div class="d-inline-block float-right">
+                <hr>
                 <a class="btn btn-secondary" href="{{ link }}" target="_blank">
                     Source <i class="fa fa-external-link"></i>
                 </a>
